# fresh-harvest-service

./: .gitignore  README.md  docker-compose.yaml
api-service/: Dockerfile  pyproject.toml
api-service/src/: alembic.ini  main.py
api-service/src/alembic/: env.py  script.py.mako
api-service/src/alembic/versions/: 2026_05_02_1731-e84ecc7b6736_init_database.py  2026_05_03_0823-a9efc853d0f9_rename_column_in_subscribe.py
api-service/src/core/: app_orchestrator.py
api-service/src/db/: image_rep.py  post_rep.py  product_rep.py  subscription_rep.py  user_rep.py  user_subscription_rep.py
api-service/src/db/core/: db_postgre.py  db_s3.py
api-service/src/db/mixins/: str_id_mixin.py
api-service/src/db/models/: __init__.py  base.py  post.py  product.py  subscription.py  user.py  user_subscription.py
api-service/src/db/scripts/: db_seeder.py
api-service/src/scripts/: db_seeder.py  infrastructure_init.py
shared/: common_config.py  enums.py
shared/db/: image_rep.py  post_rep.py  product_rep.py  subscription_rep.py  user_rep.py  user_subscription_rep.py
shared/db/core/: base_rep.py  db_postgre.py  db_s3.py  db_sql.py  exceptions.py
shared/db/mixins/: active_filter_mixin.py
shared/db/models/: __init__.py  base.py  post.py  product.py  subscription.py  user.py  user_subscription.py
shared/db/repositories/: base.py  images.py  posts.py  products.py  subscriptions.py  user_subscriptions.py  users.py
shared/enums/: image_category.py  post_status.py  task.py
shared/queue/: broker.py  tasks.py
tests/: pyproject.toml
tests/repositories_tests/: test_products.py  test_users.py
tg-service/: Dockerfile  pyproject.toml
tg-service/bot/: config.py  create_bot.py  router.py  run.py
worker-consumer/: Dockerfile  pyproject.toml
worker-scheduler/: Dockerfile  pyproject.toml
worker-scheduler/worker/: scheduler.py
