[project]
name = "api-service"
version = "0.1.0"
description = ""
authors = [
    {name = "ksiki",email = "j.kolyasha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.136.0,<0.137.0)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "asyncpg (>=0.31.0)",
    "sqlalchemy[asyncio] (>=2.0.0,<2.1.0)",
    "geoalchemy2 (>=0.19.0,<0.20.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "openai (>=2.33.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pyjwt[crypto] (>=2.12.1,<3.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
]

[tool.poetry]
package-mode = false 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
