[project]
name = "tests"
version = "0.1.0"
description = ""
authors = [
    {name = "ksiki",email = "j.kolyasha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "geoalchemy2>=0.14.0",
    "aioboto3>=13.0.0",
    "sqlalchemy>=2.0.0",
    "testcontainers[postgres] (>=4.14.2,<5.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
]

[tool.poetry]
package-mode = false 

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
