[project]
name = "tg-service"
version = "0.1.0"
description = ""
authors = [
    {name = "ksiki",email = "j.kolyasha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiogram (>=3.27.0,<4.0.0)",
    "pydantic (<=2.13.0)",
    "pydantic-settings (<=2.13.0)",
]

[tool.poetry]
package-mode = false 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
