[project]
name = "worker-scheduler"
version = "0.1.0"
description = ""
authors = [
    {name = "ksiki",email = "j.kolyasha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "taskiq (>=0.12.2,<0.13.0)",
    "taskiq-aio-pika (>=0.6.0,<0.7.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
]

[tool.poetry]
package-mode = false 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
